Attempt to fix hero section resizing on mobile when scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ header {
     position: fixed;
     top: 0;
     z-index: 1000;
+    height: 60px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -71,11 +72,11 @@ nav>button {
 
 /* HERO SECTION */
 .hero {
-    min-height: calc(90vh - 15vh);
+    min-height: calc(90vh - 60px);
     width: 100%;
     background: url('../images/nebula-background-wavy.jpg') no-repeat center center;
     background-size: cover;
-    padding-top: 15vh;
+    padding-top: 60px;
 }
 .hero-text {
     width: 90%;
